# opencode-rtk

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW_SUMMARY.md  Cargo.toml  LICENSE  NEXT_STEPS.md  PHASE1_SUMMARY.md  PHASE2_JS_TS_MODULES.md  PHASE2_SUMMARY.md  PHASE3_5_SUMMARY.md  PLAN.md  PLAN_PHASE_3_5.md  README.md  _ul-MSI  inspect_db.rs  test_full_path.js  test_plugin_spawn.js  test_simple.js  test_spawn.ts  test_spawn_fixed.js
crates/rtk-cli/: Cargo.toml
crates/rtk-cli/src/: main.rs
crates/rtk-cli/tests/: integration.rs
crates/rtk-core/: Cargo.toml
crates/rtk-core/src/: lib.rs
crates/rtk-core/src/commands/: aws_cmd.rs  cargo_cmd.rs  curl_cmd.rs  diff_cmd.rs  docker.rs  find_cmd.rs  git.rs  go_cmd.rs  golangci_cmd.rs  grep_cmd.rs  lint_cmd.rs  ls_cmd.rs  mod.rs  next_cmd.rs  npm_cmd.rs  pip_cmd.rs  playwright_cmd.rs  pnpm_cmd.rs  pre_execution.rs  prisma_cmd.rs  psql_cmd.rs  pytest_cmd.rs  read_cmd.rs  ruff_cmd.rs  tsc_cmd.rs  vitest_cmd.rs  wget_cmd.rs
crates/rtk-core/src/config/: mod.rs  settings.rs
crates/rtk-core/src/filter/: error_only.rs  grouping.rs  mod.rs  stats.rs
crates/rtk-core/src/tee/: mod.rs
crates/rtk-core/src/tracking/: db.rs  mod.rs
crates/rtk-core/src/utils/: command.rs  mod.rs  tokens.rs
crates/rtk-daemon/: Cargo.toml
crates/rtk-daemon/src/: lifecycle.rs  main.rs  protocol.rs  server.rs
crates/rtk-daemon/src/handlers/: compress.rs  health.rs  llm.rs  mod.rs  optimize.rs  shutdown.rs  stats.rs  tee.rs
plugin/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
plugin/src/: address.ts  client.ts  index.ts  model-detection.ts  spawn.ts  state.ts  types.ts
plugin/src/__tests__/: address.test.ts  client.test.ts  index.test.ts  tool-after.test.ts  tool-before.test.ts
plugin/src/hooks/: session.ts  tool-after.ts  tool-before.ts
