[workspace]
resolver = "2"
members = [
    "crates/rtk-core",
    "crates/rtk-daemon",
    "crates/rtk-cli",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
anyhow = "1"
thiserror = "1"
lazy_static = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
