[package]
name = "rtk-cli"
version = "0.1.0"
edition = "2021"
description = "CLI wrapper for RTK daemon"

[[bin]]
name = "rtk-cli"
path = "src/main.rs"

[dependencies]
rtk-core = { path = "../rtk-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
