[package]
name = "rtk-core"
version = "0.1.0"
edition = "2021"
description = "Core library for token optimization"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
